--- a/HTML.html
+++ b/HTML.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>i am learning how to code fast but i know it will take some time with effort</p>
+    <p>i am learning how to code fast but i know it will take some time with effort ina</p>
 </body>
 </html>
